src/Components/App/App.css
@import url('https://fonts.googleapis.com/css?family=Rubik&display=swap');
body {
  font-family: 'Rubik', sans-serif;
  width: 100%;
  max-width: 100%;
  margin: 0;
  padding: 0;
}
.App {
  text-align: center;
  margin-top: 4em;
}

.App-logo {
  height: 40vmin;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-wrap: no-wrap;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 1vmin);
  color: white;
}

#optionselector {
  display: flex;
  flex-direction: column;
  background-color: rgb(240,100,100);
  flex-wrap: wrap;
  align-items: center;
  width: 100%;
  margin: 30px 0;
}

#getmoviesbutton {
  height: 40px;
  width: 180px;
  color: white;
  font-size: 1em;
  border-radius: 5px;
  background-color: rgb(240,100,100);
  margin: 0 auto 1em auto;
}

#getmoviesbutton:hover {
  cursor: pointer;
}

.pointer {
  cursor: pointer;
}

#githublink {
  margin: 10px 20px 0px 20px;
  padding-bottom: 10px;
  cursor: default;
  left: 50%;
  bottom: 10px;
  position: fixed;
  transform: translate(-50%, -50%);
}

#githublink a {
  cursor: pointer;
  color: rgb(187, 30, 30);
}

@media only screen and (max-width: 800) {

  body {
    display: flex;
    flex-direction: column;
    overflow: hidden;
    justify-items: center;
  }

  .app {
    overflow: hidden;
  }
    #optionselector {
      overflow: hidden;
      width: 90%;
      padding: 10px;
    }
}

